changed section, and styles

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <p class="status active">active</p>
     </div> -->
 
-    <!-- <section class="about-us-section">
+    <section class="about-us-section">
       <img src="" alt="" />
 
       <div class="info-container">
@@ -116,7 +116,7 @@
 
         <button class="shop-btn">Shop Now</button>
       </div>
-    </section> -->
+    </section>
     <p class="description">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque eveniet
       minima ea tenetur modi illo placeat exercitationem. Libero officia fugiat
